#[UIC-1242] Added automation framework to support ui automation for RVF (#136)
* feat(enable-e2e): enabling e2e test using selenium
UIC-1242

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ require-code = true
 
 [testenv]
 commands =
-    pipenv install
+    pipenv install --ignore-pipfile
     sh {toxinidir}/scripts/create_postgresDB.sh
     {toxinidir}/superset/bin/superset db upgrade
     nosetests tests/load_examples_test.py
@@ -68,42 +68,36 @@ whitelist_externals =
 
 [testenv:cypress-dashboard]
 commands =
-    npm install -g npm@'>=6.5.0'
-    pip install -e {toxinidir}/
+    pipenv install --ignore-pipfile
     {toxinidir}/superset/assets/cypress_build.sh dashboard
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    pipenv
 
 [testenv:cypress-explore]
 commands =
-    npm install -g npm@'>=6.5.0'
-    pip install -e {toxinidir}/
+    pipenv install
     {toxinidir}/superset/assets/cypress_build.sh explore
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    pipenv
 
 [testenv:cypress-sqllab]
 commands =
-    npm install -g npm@'>=6.5.0'
-    pip install -e {toxinidir}/
+    pipenv install --ignore-pipfile
     {toxinidir}/superset/assets/cypress_build.sh sqllab
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    -rrequirements.txt
-    -rrequirements-dev.txt
+    pipenv
 
 [testenv:eslint]
 changedir = {toxinidir}/superset/assets
