--- a/Pipfile
+++ b/Pipfile
@@ -109,6 +109,7 @@ requests-kerberos = "==0.12.0"
 django = "==2.1.5"
 python-dotenv = "==0.10.1"
 pycrypto = "==2.6.1"
+gevent = "*"
 
 [dev-packages]
 "autopep8" = "==1.3.5"
