Revert "#[UIC-1242] Added automation framework to support ui automation for RVF (#136)"
This reverts commit 70883df9005406b62172b7f46c0d48b73294f7a0.

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ require-code = true
 
 [testenv]
 commands =
-    pipenv install --ignore-pipfile
+    pipenv install
     sh {toxinidir}/scripts/create_postgresDB.sh
     {toxinidir}/superset/bin/superset db upgrade
     nosetests tests/load_examples_test.py
@@ -68,36 +68,42 @@ whitelist_externals =
 
 [testenv:cypress-dashboard]
 commands =
-    pipenv install --ignore-pipfile
+    npm install -g npm@'>=6.5.0'
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh dashboard
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    pipenv
+    -rrequirements.txt
+    -rrequirements-dev.txt
 
 [testenv:cypress-explore]
 commands =
-    pipenv install
+    npm install -g npm@'>=6.5.0'
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh explore
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    pipenv
+    -rrequirements.txt
+    -rrequirements-dev.txt
 
 [testenv:cypress-sqllab]
 commands =
-    pipenv install --ignore-pipfile
+    npm install -g npm@'>=6.5.0'
+    pip install -e {toxinidir}/
     {toxinidir}/superset/assets/cypress_build.sh sqllab
 setenv =
     PYTHONPATH = {toxinidir}
     SUPERSET_CONFIG = tests.superset_test_config
     SUPERSET_HOME = {envtmpdir}
 deps =
-    pipenv
+    -rrequirements.txt
+    -rrequirements-dev.txt
 
 [testenv:eslint]
 changedir = {toxinidir}/superset/assets
