--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -19,8 +19,7 @@
     "lint-fix": "eslint --fix --ignore-path=.eslintignore --ext .js,.jsx . && tslint -c tslint.json --fix ./{src,spec}/**/*.ts{,x}",
     "sync-backend": "babel-node --preset=@babel/preset-env src/syncBackend.js",
     "cypress": "cypress",
-    "cypress-debug": "cypress open --config watchForFileChanges=true",
-    "install-cypress": "npm install cypress@3.1.5"
+    "cypress-debug": "cypress open --config watchForFileChanges=true"
   },
   
   "repository": {
@@ -60,7 +59,6 @@
     "@superset-ui/number-format": "^0.7.2",
     "@superset-ui/time-format": "^0.7.2",
     "@superset-ui/translation": "^0.7.0",
-    "@turf/turf": "^5.1.6",
     "@vx/legend": "^0.0.170",
     "@vx/responsive": "0.0.172",
     "@vx/scale": "^0.0.165",
@@ -70,7 +68,6 @@
     "brace": "^0.11.1",
     "classnames": "^2.2.5",
     "crypto-js": "3.1.9-1",
-    "cypress": "^3.1.5",
     "d3": "^3.5.17",
     "d3-array": "^1.2.4",
     "d3-cloud": "^1.2.1",
@@ -89,13 +86,14 @@
     "distributions": "^1.0.0",
     "dnd-core": "^2.6.0",
     "dompurify": "^1.0.3",
-    "esri-leaflet": "2.2.3",
     "geolib": "^2.0.24",
     "immutable": "^3.8.2",
     "jquery": "3.1.1",
     "json-bigint": "^0.3.0",
-    "leaflet": "^1.3.4",
     "lodash": "^4.17.11",
+    "leaflet": "^1.3.4",
+    "@turf/turf": "^5.1.6",
+    "esri-leaflet": "2.2.3",
     "lodash.throttle": "^4.1.1",
     "luma.gl": "^5.1.4",
     "mapbox-gl": "^0.45.0",
@@ -168,6 +166,7 @@
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "cypress": "^3.0.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
