--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -137,6 +137,7 @@
     "redux-thunk": "^2.1.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "shortid": "^2.2.6",
+    "sugar": "^2.0.6",
     "underscore": "^1.8.3",
     "urijs": "^1.18.10",
     "viewport-mercator-project": "^6.1.1"
