--- a/superset/assets/package.json
+++ b/superset/assets/package.json
@@ -84,6 +84,7 @@
     "bootstrap": "^3.3.6",
     "bootstrap-slider": "^10.0.0",
     "brace": "^0.11.1",
+    "chrono-node": "^1.3.11",
     "classnames": "^2.2.5",
     "d3-array": "^1.2.4",
     "d3-color": "^1.2.0",
@@ -137,7 +138,6 @@
     "redux-thunk": "^2.1.0",
     "redux-undo": "^1.0.0-beta9-9-7",
     "shortid": "^2.2.6",
-    "sugar": "^2.0.6",
     "underscore": "^1.8.3",
     "urijs": "^1.18.10",
     "viewport-mercator-project": "^6.1.1"
